adding inline and block level elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    Tharunika
+    <!-- Block level element -->
+    <div>Tharunika</div>
+    <div>Vemireddy</div>
+    <!-- Block level element -->
+    <span>Siri</span>
+    <span>How are you</span>
+    <span>Fine</span>
+
 </body>
-</ht
+</html>
