adding heading and paragraph

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       <span>Tharunika</span> is the first name, and 
       <span>Vemireddy</span> is the last name, both wrapped in inline tags within a block-level container.
     </div>
+    <!--Headings tags-->
+    <h1>Tharunika</h1>
+    <h2>Siri</h2>
+    <h3>I am good girl</h3>
+    <h4>How are you</h4>
+    <h5>This is web developement class</h5>
+    <h6>content of html</h6>
+
+    <!--Paragraphs-->
+    <p>Html is a used to create web pages</p>
 
   </body>
 </html>
