--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
     <h6>content of html</h6>
 
     <!--Paragraphs-->
-    <p>Html is a used to create web pages</p>
+    <p>Html is a used to create web pages<br>It can use various types</p>
+
+    <!--Break the line and go to next line-->
+    <!--center is used in css part-->
+    <center>It is structure format</center>
+    <!--hr is used to horizontal line-->
+
+    <hr>The html elements start on a new line is called block level
+    <!--Preserve formatting tag-->
+    <pre>
+      git is used to track changes in version
+      by using different commands
+
+    </pre>
+    <p>hey we are using some &nbsp; entities</p>
 
   </body>
 </html>
