--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!--hr is used to horizontal line-->
 
     <hr>The html elements start on a new line is called block level
-    <!--Preserve formatting tag-->
+    <!--Preserve formatting tag is used to space between the words-->
     <pre>
       git is used to track changes in version
       by using different commands
