--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
 
     </pre>
     <p>hey we are using some &nbsp; entities</p>
+    <!--unordered list-->
+    <ul>
+      <li>First</li>
+      <li>Second</li>
+      <li>Third</li>
+    </ul>
+
+    <!----Ordered List--->
+    <ol type = "a">
+      <li>third</li>
+      <li>fourth</li>
+      <li>fifth</li>
+
+    </ol>
+
+
 
   </body>
 </html>
