adding different tags

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
     </ol>
     <p> &lt;</p>
     <a href="https://www.youtube.com/">Go to youtube</a>
+    <p>
+      <em>adds emphasis (typically in italics)</em>
+      <strong>makes text bold for importance</strong>
+      <u> underlines the text</u>
+      <ins> represnts inserted text</ins>
+      <del> indicates deleted text with strikethrough</del>
+      <mark>highlighta text with a yellow background</mark>
+      <b> Thinks before what will u do &quot;</b>
+      <strike> also shows strikethrough</strike>
+      <cite> is for citations</cite>
+      <blockquote> is used for long quotations typically displayed with indentation</blockquote>
+
+    </p>
+   
 
   </body>
 </html>
