adding image tag

--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
       <strike> also shows strikethrough</strike>
       <cite> is for citations</cite>
       <blockquote> is used for long quotations typically displayed with indentation</blockquote>
+      <q>is for inline quotations ofetn dispalyed in marks</q>
 
     </p>
+
+    <img src="sunflower.jpg" alt="Description of image" width = "200px" height ="200px">
+
    
 
   </body>
